change JVM gc to CMS modify session time to 180 minutes